cedar-lean/UnitTest/parser_tests/negative/invalid_has_number.cedar
permit(principal, action, resource) when { resource has 123 };
